# fazos

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bash_in_docker.sh  build.sh  build_in_docker.sh  format.sh  make.sh  make_in_docker.sh  setup.sh
iso/: CMakeLists.txt  grub.cfg
kernel/: .gitignore  Makefile  boot.S  boot_asm.S  kernel.c  main.c  screen.c  screen.h
src/kernel/: CMakeLists.txt  boot.s  boot_asm.S  debug.c  debug.h  dummylibc.c  exception.c  exception.h  gdt.c  gdt.h  gdt.s  gdt_asm.S  helpers.h  idt.c  idt.h  idt_asm.S  interrupt.c  interrupt.h  irq.c  irq.h  irq_asm.S  isr.c  isr.h  isr.s  isrs.c  isrs.h  isrs_asm.S  kernel.c  keyboard.c  keyboard.h  link.ld  main.c  multiboot.c  multiboot.h  paging.c  paging.h  paging.s  pmem.c  pmem.h  printf.c  (+12 more)
